Closed
Bug 1181085
Opened 10 years ago
Closed 10 years ago
Intermittent crash in layout/reftests/webm-video/poster-12.html (and probably others)
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla42
Tracking | Status | |
---|---|---|
firefox42 | --- | fixed |
People
(Reporter: roc, Assigned: roc)
References
Details
Attachments
(1 file)
TEST-UNEXPECTED-FAIL | file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/webm-video/poster-12.html | application terminated with exit code 11
PROCESS-CRASH | file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/webm-video/poster-12.html | application crashed [@ mozilla::layers::ImageBridgeParent::NotifyImageComposites(nsTArray<mozilla::layers::ImageCompositeNotification>&)]
Return code: 11
http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-linux64/1436261013/mozilla-inbound_ubuntu64_vm_test-reftest-2-bm120-tests1-linux64-build38.txt.gz
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 2•10 years ago
|
||
Bug 1181085. Don't accumulate ImageCompositeNotifications when we're compositing to a DrawTarget. r=nical
Attachment #8630432 -
Flags: review?(nical.bugzilla)
Assignee | ||
Comment 3•10 years ago
|
||
I'm not 100% sure this will fix it, but I think it fixes a real bug that could be the problem.
Comment 4•10 years ago
|
||
Comment on attachment 8630432 [details]
MozReview Request: Bug 1181085. Don't accumulate ImageCompositeNotifications when we're compositing to a DrawTarget. r=nical
https://reviewboard.mozilla.org/r/12719/#review11289
Ship It!
Attachment #8630432 -
Flags: review?(nical.bugzilla) → review+
Comment 6•10 years ago
|
||
Pushing this at nical's request on the off chance it helps with the tutorial_test.js permafail we're dealing with currently on inbound.
https://hg.mozilla.org/integration/mozilla-inbound/rev/193d0c16b235
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•